unpackaged/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>LSIG to OpCos Oppty</fullName>
        <description>Sales process for the LSIG sourced opportunities for the OpCos.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Final Negotiation</fullName>
        </values>
        <values>
            <fullName>Presentation of Solutions</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Recognition of Needs</fullName>
        </values>
        <values>
            <fullName>Resolution of Concerns</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Data__c</fullName>
        <label>Budget Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Lost_Data__c</fullName>
        <label>Won Lost Reason</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Data__c</fullName>
        <label>Main Competitor</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Exists_in_OpCo__c</fullName>
        <label>Contact Exists in OpCo?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Role_ID__c</fullName>
        <label>Contact Role ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <label>Contact Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_LSIG__c</fullName>
        <formula>IF(CONTAINS(CreatedBy.LastName,&apos;Heroku&apos;) , false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By LSIG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <label>Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Situation__c</fullName>
        <label>Customer Situation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeletedDate__c</fullName>
        <label>OpCo Record Deleted Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <label>Destination OpCo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beckman</fullName>
                </value>
                <value>
                    <fullName>IDBS</fullName>
                </value>
                <value>
                    <fullName>Leica</fullName>
                </value>
                <value>
                    <fullName>Moldev</fullName>
                </value>
                <value>
                    <fullName>SCIEX</fullName>
                </value>
                <value>
                    <fullName>LSIG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Revenue__c</fullName>
        <label>Expected Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecast_Status__c</fullName>
        <label>Forecast Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding__c</fullName>
        <label>Funding%</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interface_Status__c</fullName>
        <inlineHelpText>This would auto update after LSIG Contact selection &amp; backend process performs Sync with OpCo.</inlineHelpText>
        <label>Interface Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2-Awaiting</fullName>
                    <label>Awaiting OpCo Account/Contact Selection</label>
                </value>
                <value>
                    <fullName>3-Ready</fullName>
                    <label>Ready To Send To OpCo</label>
                </value>
                <value>
                    <fullName>4-Intransit</fullName>
                    <label>In-Transit To OpCo</label>
                </value>
                <value>
                    <fullName>5-Sent</fullName>
                    <label>In-Transit</label>
                </value>
                <value>
                    <fullName>6-Error</fullName>
                    <label>Failure in Transfer or Sync</label>
                </value>
                <value>
                    <fullName>7-Sync</fullName>
                    <label>Under Bi-Directional Sync</label>
                </value>
                <value>
                    <fullName>1-Awaiting</fullName>
                    <isActive>false</isActive>
                    <label>Awaiting LSIG Contact Selection</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LSIG_AttachedMassSpec__c</fullName>
        <label>Attached Mass Spec</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LSIG_SystemSolution__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SCIEX (New)</fullName>
                </value>
                <value>
                    <fullName>Waters</fullName>
                </value>
                <value>
                    <fullName>Thermo (existing system)</fullName>
                </value>
                <value>
                    <fullName>Shimadzu</fullName>
                </value>
                <value>
                    <fullName>Waters (existing system)</fullName>
                </value>
                <value>
                    <fullName>Stand Alone</fullName>
                </value>
                <value>
                    <fullName>Agilent</fullName>
                </value>
                <value>
                    <fullName>Thermo</fullName>
                </value>
                <value>
                    <fullName>Bruker (existing system)</fullName>
                </value>
                <value>
                    <fullName>Bruker</fullName>
                </value>
                <value>
                    <fullName>Sciex (existing system)</fullName>
                </value>
                <value>
                    <fullName>AB SCIEX</fullName>
                </value>
                <value>
                    <fullName>2000</fullName>
                </value>
                <value>
                    <fullName>3000</fullName>
                </value>
                <value>
                    <fullName>3200</fullName>
                </value>
                <value>
                    <fullName>3200 MD</fullName>
                </value>
                <value>
                    <fullName>3200 Q</fullName>
                </value>
                <value>
                    <fullName>3500</fullName>
                </value>
                <value>
                    <fullName>4000</fullName>
                </value>
                <value>
                    <fullName>4000+</fullName>
                </value>
                <value>
                    <fullName>4000Q</fullName>
                </value>
                <value>
                    <fullName>4500</fullName>
                </value>
                <value>
                    <fullName>4500 MD</fullName>
                </value>
                <value>
                    <fullName>4500 Q</fullName>
                </value>
                <value>
                    <fullName>4600</fullName>
                </value>
                <value>
                    <fullName>5000</fullName>
                </value>
                <value>
                    <fullName>5500</fullName>
                </value>
                <value>
                    <fullName>5500 Q</fullName>
                </value>
                <value>
                    <fullName>5600</fullName>
                </value>
                <value>
                    <fullName>5800</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LSIG_CompetitivePosition__c</fullName>
        <label>Competitive Position%</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LSIG_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LSIG Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LSIG_LC_PrimaryApplication__c</fullName>
        <label>Primary Application</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LSIG_MarketVertical__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Deep Tissue Imaging</fullName>
                </value>
                <value>
                    <fullName>Lifetime Imaging</fullName>
                </value>
                <value>
                    <fullName>Routine Imaging</fullName>
                </value>
                <value>
                    <fullName>Macro Imaging</fullName>
                </value>
                <value>
                    <fullName>EM Ultrastructure</fullName>
                </value>
                <value>
                    <fullName>Nanoscopy/SuperResolution</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>Medical Device</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Material and Earth Science</fullName>
                </value>
                <value>
                    <fullName>Semiconductor</fullName>
                </value>
                <value>
                    <fullName>Metallurgy</fullName>
                </value>
                <value>
                    <fullName>Chemical Industry</fullName>
                </value>
                <value>
                    <fullName>Cell Biology</fullName>
                </value>
                <value>
                    <fullName>Cancer Research</fullName>
                </value>
                <value>
                    <fullName>Neuroscience</fullName>
                </value>
                <value>
                    <fullName>Microbiology</fullName>
                </value>
                <value>
                    <fullName>Developmental biology</fullName>
                </value>
                <value>
                    <fullName>Immunology</fullName>
                </value>
                <value>
                    <fullName>Biophysicist</fullName>
                </value>
                <value>
                    <fullName>Dentistry</fullName>
                </value>
                <value>
                    <fullName>ENT</fullName>
                </value>
                <value>
                    <fullName>Neurosurgery</fullName>
                </value>
                <value>
                    <fullName>Ophthalmology</fullName>
                </value>
                <value>
                    <fullName>Orthopedic</fullName>
                </value>
                <value>
                    <fullName>Clinical Diagnosis &amp; Pathology</fullName>
                </value>
                <value>
                    <fullName>IVF</fullName>
                </value>
                <value>
                    <fullName>R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Process &amp; Production Engineering</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LSIG_LineofBusiness__c</fullName>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BioProcess</fullName>
                </value>
                <value>
                    <fullName>BioResearch</fullName>
                </value>
                <value>
                    <fullName>Drug Discovery</fullName>
                </value>
                <value>
                    <fullName>Reagents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LSIG_MarketSegment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pharma</fullName>
                </value>
                <value>
                    <fullName>CRO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LSIG_MarketVertical__c</fullName>
        <label>Market Vertical 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pharma</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                    <label>Life Sciences</label>
                </value>
                <value>
                    <fullName>Life Science Research</fullName>
                </value>
                <value>
                    <fullName>Biopharma</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Environmental/Industrial</fullName>
                </value>
                <value>
                    <fullName>Food/Beverage</fullName>
                </value>
                <value>
                    <fullName>Forensic</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LSIG_OpportunityType__c</fullName>
        <label>Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Defend</fullName>
                </value>
                <value>
                    <fullName>Existing AB SCIEX account</fullName>
                </value>
                <value>
                    <fullName>New Account</fullName>
                </value>
                <value>
                    <fullName>Existing Account</fullName>
                </value>
                <value>
                    <fullName>Cross Sell</fullName>
                    <default>true</default>
                    <label>Cross Sell</label>
                </value>
                <value>
                    <fullName>New Logo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LSIG_PrimaryCompetitor__c</fullName>
        <label>Primary Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accumen</fullName>
                </value>
                <value>
                    <fullName>Agilent</fullName>
                </value>
                <value>
                    <fullName>Beckman</fullName>
                </value>
                <value>
                    <fullName>Becton Dickenson</fullName>
                </value>
                <value>
                    <fullName>Berkeley Lights</fullName>
                </value>
                <value>
                    <fullName>Berthold</fullName>
                </value>
                <value>
                    <fullName>Biacore</fullName>
                </value>
                <value>
                    <fullName>Bio-Rad</fullName>
                </value>
                <value>
                    <fullName>Biotek</fullName>
                </value>
                <value>
                    <fullName>BMG</fullName>
                </value>
                <value>
                    <fullName>Carterra</fullName>
                </value>
                <value>
                    <fullName>Corning</fullName>
                </value>
                <value>
                    <fullName>Creoptix</fullName>
                </value>
                <value>
                    <fullName>Dagan</fullName>
                </value>
                <value>
                    <fullName>DiscoverX</fullName>
                </value>
                <value>
                    <fullName>Dynamic Biosensors</fullName>
                </value>
                <value>
                    <fullName>Echo Revolve</fullName>
                </value>
                <value>
                    <fullName>ELISA</fullName>
                </value>
                <value>
                    <fullName>Epicenter</fullName>
                </value>
                <value>
                    <fullName>Eppendorf</fullName>
                </value>
                <value>
                    <fullName>FACS</fullName>
                </value>
                <value>
                    <fullName>Fisher</fullName>
                </value>
                <value>
                    <fullName>General Electric</fullName>
                </value>
                <value>
                    <fullName>Gyros</fullName>
                </value>
                <value>
                    <fullName>Hamamatsu</fullName>
                </value>
                <value>
                    <fullName>Hamilton</fullName>
                </value>
                <value>
                    <fullName>HEKA</fullName>
                </value>
                <value>
                    <fullName>Hidex</fullName>
                </value>
                <value>
                    <fullName>Horiba</fullName>
                </value>
                <value>
                    <fullName>HPLC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LSIG_ProductFamily__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LSIG_LineofBusiness__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CRO</fullName>
                </value>
                <value>
                    <fullName>ADME Tox</fullName>
                </value>
                <value>
                    <fullName>Automated Electrophysiology</fullName>
                </value>
                <value>
                    <fullName>BT RC</fullName>
                </value>
                <value>
                    <fullName>Calcium</fullName>
                </value>
                <value>
                    <fullName>Cardiotoxicity</fullName>
                </value>
                <value>
                    <fullName>Catchpoint</fullName>
                </value>
                <value>
                    <fullName>Cell Biology</fullName>
                </value>
                <value>
                    <fullName>Cell Viability</fullName>
                </value>
                <value>
                    <fullName>ClonePix</fullName>
                </value>
                <value>
                    <fullName>CloneSelect</fullName>
                </value>
                <value>
                    <fullName>CNS</fullName>
                </value>
                <value>
                    <fullName>dsDNA Quantitation</fullName>
                </value>
                <value>
                    <fullName>Flexstation</fullName>
                </value>
                <value>
                    <fullName>FLIPR</fullName>
                </value>
                <value>
                    <fullName>GenePix</fullName>
                </value>
                <value>
                    <fullName>Imaging</fullName>
                </value>
                <value>
                    <fullName>IMAP</fullName>
                </value>
                <value>
                    <fullName>IX Pico</fullName>
                </value>
                <value>
                    <fullName>Liquid Handling</fullName>
                </value>
                <value>
                    <fullName>LiveWare</fullName>
                </value>
                <value>
                    <fullName>MaxLine</fullName>
                </value>
                <value>
                    <fullName>Membrane Potential</fullName>
                </value>
                <value>
                    <fullName>Metamorph</fullName>
                </value>
                <value>
                    <fullName>M-FilterMax</fullName>
                </value>
                <value>
                    <fullName>Microplate Reader Reagents</fullName>
                </value>
                <value>
                    <fullName>M-Paradigm</fullName>
                </value>
                <value>
                    <fullName>Neurotransmitter</fullName>
                </value>
                <value>
                    <fullName>Other Reagents</fullName>
                </value>
                <value>
                    <fullName>Potassium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LSIG_ProductGroups__c</fullName>
        <label>Product Groups</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LSIG_ProductLine__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DxFLEX</fullName>
                </value>
                <value>
                    <fullName>Access</fullName>
                </value>
                <value>
                    <fullName>Aquios</fullName>
                </value>
                <value>
                    <fullName>AUC</fullName>
                </value>
                <value>
                    <fullName>Biomek</fullName>
                </value>
                <value>
                    <fullName>Centrifugation</fullName>
                </value>
                <value>
                    <fullName>CytoFlex</fullName>
                </value>
                <value>
                    <fullName>Echo</fullName>
                </value>
                <value>
                    <fullName>FC500</fullName>
                </value>
                <value>
                    <fullName>Gallios</fullName>
                </value>
                <value>
                    <fullName>Genomics</fullName>
                </value>
                <value>
                    <fullName>High Performance</fullName>
                </value>
                <value>
                    <fullName>Liquid Handlers</fullName>
                </value>
                <value>
                    <fullName>Navios</fullName>
                </value>
                <value>
                    <fullName>Particle Characterization</fullName>
                </value>
                <value>
                    <fullName>Particle Counting</fullName>
                </value>
                <value>
                    <fullName>Personal CA</fullName>
                </value>
                <value>
                    <fullName>Prep</fullName>
                </value>
                <value>
                    <fullName>Product Line PCC</fullName>
                </value>
                <value>
                    <fullName>Reagents</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Sorter</fullName>
                </value>
                <value>
                    <fullName>Table Top</fullName>
                </value>
                <value>
                    <fullName>Ultra Prep</fullName>
                </value>
                <value>
                    <fullName>Bioreactor</fullName>
                </value>
                <value>
                    <fullName>Biomek Genomics Workstation</fullName>
                </value>
                <value>
                    <fullName>NGeniuS</fullName>
                </value>
                <value>
                    <fullName>EMnetik</fullName>
                </value>
                <value>
                    <fullName>Cell and Media Analysis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LSIG_ProductLine__c</fullName>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automation</fullName>
                </value>
                <value>
                    <fullName>Centrifugation</fullName>
                </value>
                <value>
                    <fullName>Flow Cytometry</fullName>
                </value>
                <value>
                    <fullName>PCC</fullName>
                </value>
                <value>
                    <fullName>Microbioreactor</fullName>
                </value>
                <value>
                    <fullName>Genomics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LSIG_ProductModules__c</fullName>
        <label>Product Modules</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LSIG_ProductGroups__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RNAdvance Tissue</fullName>
                </value>
                <value>
                    <fullName>Access Dual Robot System</fullName>
                </value>
                <value>
                    <fullName>Access Single Robot System</fullName>
                </value>
                <value>
                    <fullName>Access Workstation</fullName>
                </value>
                <value>
                    <fullName>ADS 2.0</fullName>
                </value>
                <value>
                    <fullName>Airfuge</fullName>
                </value>
                <value>
                    <fullName>Allegra 25</fullName>
                </value>
                <value>
                    <fullName>Allegra 25R</fullName>
                </value>
                <value>
                    <fullName>Allegra 6</fullName>
                </value>
                <value>
                    <fullName>Allegra 64</fullName>
                </value>
                <value>
                    <fullName>Allegra 64R</fullName>
                </value>
                <value>
                    <fullName>Allegra V-15R</fullName>
                </value>
                <value>
                    <fullName>Allegra X-12/14/15</fullName>
                </value>
                <value>
                    <fullName>Allegra X-15</fullName>
                </value>
                <value>
                    <fullName>Allegra X-30</fullName>
                </value>
                <value>
                    <fullName>Allegra X-5</fullName>
                </value>
                <value>
                    <fullName>Application Support</fullName>
                </value>
                <value>
                    <fullName>Aquios</fullName>
                </value>
                <value>
                    <fullName>Aquios ADS</fullName>
                </value>
                <value>
                    <fullName>Aquios CL</fullName>
                </value>
                <value>
                    <fullName>Avanti</fullName>
                </value>
                <value>
                    <fullName>Avanti J15</fullName>
                </value>
                <value>
                    <fullName>Avanti J-15</fullName>
                </value>
                <value>
                    <fullName>Avanti J26S/J30I</fullName>
                </value>
                <value>
                    <fullName>Avanti J6/HC</fullName>
                </value>
                <value>
                    <fullName>Avanti JE</fullName>
                </value>
                <value>
                    <fullName>Avanti JXN 26</fullName>
                </value>
                <value>
                    <fullName>Avanti JXN 30</fullName>
                </value>
                <value>
                    <fullName>Avanti JXN-26</fullName>
                </value>
                <value>
                    <fullName>BioLector 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LSIG_PurchaseLCfromanothervendor__c</fullName>
        <label>Purchase LC from Another Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LSIG_SystemSolution__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>